# Nimo

./: CMakeLists.txt  main.cpp  project_layout.md
database/: databasemanager.cpp  databasemanager.h
logging/: logger.cpp  logger.h  loggermacros.h  requestcontext.cpp  requestcontext.h  requestscope.h
repositories/: goalrepository.cpp  goalrepository.h  occurrencerepository.cpp  scorerepository.cpp  scorerepository.h  streakrepository.cpp  streakrepository.h
services/: calendarservice.cpp  calendarservice.h  dashboardservice.cpp  dashboardservice.h  goalservice.cpp  goalservice.h  occurrenceservice.cpp  occurrenceservice.h  scoreservice.cpp  scoreservice.h  streakservice.cpp  streakservice.h
